--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "opencage-api-client": "^1.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
