--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.1.0",
     "opencage-api-client": "^1.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
