--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-share": "^5.1.0",
     "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
